--- a/morning-os-web/src/main/resources/profiles/product/jdbc.properties
+++ b/morning-os-web/src/main/resources/profiles/product/jdbc.properties
@@ -7,9 +7,9 @@ jdbc.driver=com.mysql.jdbc.Driver
 #AutoReconnect 自动连接 ; Character Encoding 字符编码;
 jdbc.url=jdbc:mysql://localhost:3306/pussinboots_morning?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
 #定义连接数据库账号
-jdbc.username=root
+jdbc.username=tykj
 #定义连接数据库密码
-jdbc.password=root
+jdbc.password=tykj
 #定义初始连接数
 jdbc.pool.init=1
 #定义最大连接数
