--- a/morning-cms-web/src/main/resources/profiles/dev/jdbc.properties
+++ b/morning-cms-web/src/main/resources/profiles/dev/jdbc.properties
@@ -6,10 +6,18 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #AutoReconnect 自动连接 ; Character Encoding 字符编码;
 jdbc.url=jdbc:mysql://localhost:3306/pussinboots_morning?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
-#定义连接数据库账号
+##定义连接数据库账号
 jdbc.username=root
-#定义连接数据库密码
+##定义连接数据库密码
 jdbc.password=root
+
+
+#jdbc.url=jdbc:mysql://localhost:3306/tykj?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
+##定义连接数据库账号
+#jdbc.username=tykj
+##定义连接数据库密码
+#jdbc.password=tykj
+
 #定义初始连接数
 jdbc.pool.init=1
 #定义最大连接数
